--- a/index.html
+++ b/index.html
@@ -942,11 +942,17 @@ nav a {
 </head>
 <body>
 
+ 
   <!-- Header -->
   <header>
+    
     <div class="logo">
       <img src="Logo mind the brain.png" alt="Mind the Brain Logo" />
     </div>
+
+
+    <h>⚠️This is a Preliminary <strong>Prototype Website</strong></h>
+ 
     <nav>
       <ul>
         <button class="btn btn-textalone" onclick="scrollToSection('about')">
@@ -1008,7 +1014,7 @@ nav a {
 
   <section class="tabs-section">
     <div class="container">
-      <h2 class="section-title">🌍 Mission, Vision & Values</h2>
+      <h2 class="tabs-title">🌍 Mission, Vision & Values</h2>
   
       <div class="mission-vision">
         <div class="block">
@@ -1025,22 +1031,26 @@ nav a {
         <h3>💛 Core Values</h3>
         <div class="values-grid">
           <div class="value-card">
-            <h4>Inclusion</h4>
-            <p>We prioritize accessibility, diversity, and equity in everything we do — from classroom layouts to community support systems.</p>
+            <h4>Inclusivity</h4>
+            <p>We build environments — physical, educational, and social — that embrace all individuals, regardless of neurotype, ability, or background, ensuring everyone has access to opportunities and support.</p>
           </div>
           <div class="value-card">
-            <h4>Human Rights</h4>
-            <p>We believe neurodiversity is a fundamental human rights issue and advocate for dignity, safety, and agency for all.</p>
+            <h4>Diversity </h4>
+            <p>We celebrate the full spectrum of human minds and experiences, recognizing that different ways of thinking, learning, and being are strengths to be valued—not barriers to be fixed.
+              
+            </p>
           </div>
           <div class="value-card">
             <h4>Community Empowerment</h4>
-            <p>We build networks that connect, support, and uplift families, educators, and individuals with lived experience.</p>
+            <p>We equip individuals, families, and communities with knowledge, tools, and safe spaces to thrive, advocate for themselves, and shape a more just and supportive society.
+            </p>
           </div>
           <div class="value-card">
-            <h4>Education for All</h4>
-            <p>We challenge traditional education systems and work to create adaptive, inclusive, and meaningful learning environments.</p>
+            <h4>Dignity & Equity</h4>
+            <p>We believe access to education, care, and belonging is a fundamental human right—not a privilege—working to dismantle stigma, discrimination, and systemic exclusion in Lebanon and beyond.
+            </p>
           </div>
-          <div class="value-card">
+          <!-- <div class="value-card">
             <h4>Design Justice</h4>
             <p>We leverage inclusive and biophilic design to reimagine schools, therapy spaces, and cities as places of healing and belonging.</p>
           </div>
@@ -1051,7 +1061,7 @@ nav a {
           <div class="value-card">
             <h4>Collaboration</h4>
             <p>We work across disciplines — architecture, health, education, and technology — to create sustainable, intersectional change.</p>
-          </div>
+          </div> -->
         </div>
       </div>
     </div> 
@@ -1064,7 +1074,7 @@ nav a {
 
 <!-- SDG Section -->
 <section class="tabs-section">
-    <h2 style="text-align:center; font-size:2rem; margin-bottom:40px; color: #2c3e50;">Our Focused SDGs</h2>
+    <h1 class="tabs-title">Our Focused SDGs</h2>
     <div class="sdg-container">
       <div class="sdg-card">
         <img src="E-Goal-03-1024x1024.png" alt="SDG 3" />
@@ -1687,7 +1697,7 @@ nav a {
 
   <!-- Accordion Section -->
 <!-- Accordion Section -->
-<section style="padding: 60px 20px;" class="tabs-section">
+<!-- <section style="padding: 60px 20px;" class="tabs-section">
     <h2 style="text-align:center; font-size:2rem; margin-bottom:30px; color: #2c3e50;">Accordion Section</h2>
     <div class="accordion">
       <div class="accordion-item">
@@ -1724,7 +1734,7 @@ nav a {
   </section>
   
 
-
+ -->
 
 
 
@@ -1779,8 +1789,8 @@ nav a {
       <div class="footer-title">Mind the Brain Network</div>
       <p class="footer-tagline">Empowering neurodiversity through inclusive design and innovation</p>
       <div class="footer-links">
-        <a href="#" id="aboutLink">About Me</a>
-        <a href="#" id="contactLink">Contact Us</a>
+        <!-- <a href="#" id="aboutLink">About Me</a>
+        <a href="#" id="contactLink">Contact Us</a> -->
 
       </div>
       <p class="footer-copy">© 2025 Mind the Brain Network. All rights reserved.</p>
