--- a/index.html
+++ b/index.html
@@ -1032,9 +1032,11 @@ nav a {
       <div class="hero-text">
         <h1>Mind the Brain Network</h1>
         <p>Building a world where neurodiversity is understood, respected, and empowered — through education, design, and community.</p>
-        <button class="btn btn-white" onclick="scrollToSection('about')">Learn More</button>
-        <button class="btn btn-outline" onclick="scrollToSection('offerings')">What We Offer</button>
+        <button style="margin: 0.3rem;"class="btn btn-white" onclick="scrollToSection('about')">Learn More</button>
+        <button style="margin: 0.3rem;"class="btn btn-outline" onclick="scrollToSection('offerings')">What We Offer</button>
+        <p><button class="btn btn-outline"  style="margin: 1rem;" onclick="scrollToSection('apptentative')">App Concept</button>
         <p><button class="btn btn-textalone" onclick="scrollToSection('neurodivergence')">What is NeuroDiversity?</button></p>
+      
       </div>
       <div class="hero-image">
         <img src="ND-DG+Poster4.png" alt="Brain">
